# beemonitor

./: .geminiignore  .gitignore  .gitmodules  BeeMonitor_Article.rtf  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  GEMINI.md  MEDIUM.md  README.md  RESEARCH.md  TODO.md  TROUBLESHOOTING.md  WIRING.md  build_littlefs.py  config.h.example  diagram.json  diagram.md  fix_string.py  get_ip.py  partitions.csv  partitions_8mb.csv  platformio.ini  pre_build_script.py  sdkconfig  sync_docs.sh  sync_wokwi.sh  validate_ei_project.py  wokwi.key  wokwi.toml
components/spiffs_image/: CMakeLists.txt
data/: CHANGELOG.md
edge_impulse/: edge_impulse.keys
include/: ssl_cert.h
integration/: app_httpd.cpp  esp32camsd_main.cpp
main/: CMakeLists.txt  beemonitor.cpp  config.c  config.h  display.cpp  display.h  person_detect_model_data.cc  person_detect_model_data.h  provisioning.c  provisioning.h  provisioning_handler.c  version.h
main/web/: hardware.html  index.html  style.css
src/: main.cpp
